--- a/santa_gifts_server/package.json
+++ b/santa_gifts_server/package.json
@@ -17,6 +17,7 @@
     "express-handlebars": "^6.0.2",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
+    "react-router-dom": "^6.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
