--- a/santa_gifts_server/package.json
+++ b/santa_gifts_server/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start1": "ts-node index.ts",
-    "start": "tsnd index.ts"
+    "start": "tsnd index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -23,8 +24,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.14",
     "@types/uuid": "^8.3.4",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
